# minisat-for-Windows

./: CMakeLists.txt  README.md  build.ps1
patch_files/: CMakeLists.txt
